--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90b489">  <td>23/01/06 13:45:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StringFormat.run2()[pri:0, instance:Sprint2Git.StringFormat@6069db50]">run2</td> 
-  <td>main@1882349076</td>   <td></td> </tr>
-<tr bgcolor="90b489">  <td>23/01/06 13:45:45</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StringFormat.run3()[pri:0, instance:Sprint2Git.StringFormat@6069db50]">run3</td> 
-  <td>main@1882349076</td>   <td></td> </tr>
-<tr bgcolor="90b489">  <td>23/01/06 13:45:45</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StringFormat.run1()[pri:0, instance:Sprint2Git.StringFormat@6069db50]">run1</td> 
-  <td>main@1882349076</td>   <td></td> </tr>
+<tr bgcolor="90b489">  <td>23/01/06 22:02:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StringPrefix.run()[pri:0, instance:Sprint2Git.StringPrefix@49139829]">run</td> 
+  <td>main@1101184763</td>   <td></td> </tr>
 </table>
